# Kmit

./: .gitignore  CMakeLists.txt  CMakeSettings.json
source/: CMakeLists.txt  main.cpp
source/Application/: CMakeLists.txt  KmitApplication.cpp  KmitApplication.h
source/Time/: CMakeLists.txt  Clocks.cpp  Clocks.h
